# cadexchange_test_task

./: CMakeLists.txt  LICENSE  README.md  build.bat
src/: derivative.cpp  derivative.hh  main.cpp  math.hh  math_object.cpp  math_object.hh  math_vector.hh
